--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/jazba",
-            "baseHref": "/JazbaCreativityWebsite/",
+            "baseHref": "/JazbaCreativity.github.io/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
